--- a/composer.json
+++ b/composer.json
@@ -21,11 +21,11 @@
         "symfony/form": "~2.2",
         "symfony/security": "~2.2",
         "symfony/console": "~2.2",
+        "friendsofsymfony/comment-bundle": "2.*@dev",
         "sonata-project/core-bundle": "~2.2",
         "sonata-project/admin-bundle": "~2.2,>=2.2.9",
         "sonata-project/doctrine-extensions": "~1.0",
-        "sonata-project/easy-extends-bundle": "~2.1",
-        "friendsofsymfony/comment-bundle": "2.*@dev"
+        "sonata-project/easy-extends-bundle": "~2.1"
     },
     "suggest": {
         "sonata-project/doctrine-orm-admin-bundle": "~2.2"
