--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,6 @@
         "symfony/console": "~2.2",
         "friendsofsymfony/comment-bundle": "~2.0@dev",
         "sonata-project/core-bundle": "~2.2",
-        "sonata-project/admin-bundle": "~2.2,>=2.2.9",
         "sonata-project/doctrine-extensions": "~1.0",
         "sonata-project/easy-extends-bundle": "~2.1"
     },
@@ -31,9 +30,8 @@
         "sonata-project/doctrine-orm-admin-bundle": "~2.2"
     },
     "autoload": {
-        "psr-0": { "Sonata\\CommentBundle": "" }
+        "psr-4": { "Sonata\\CommentBundle\\": "" }
     },
-    "target-dir": "Sonata/CommentBundle",
     "extra": {
         "branch-alias": {
             "dev-master": "2.2.x-dev"
