--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,10 @@
         "sonata-project/doctrine-extensions": "~1.0",
         "sonata-project/easy-extends-bundle": "~2.1"
     },
+    "require-dev": {
+        "sonata-project/classification-bundle": "~2.2",
+        "sonata-project/media-bundle": "~2.2"
+    },
     "suggest": {
         "sonata-project/doctrine-orm-admin-bundle": "~2.2"
     },
