--- a/composer.json
+++ b/composer.json
@@ -21,18 +21,21 @@
         "symfony/form": "~2.2",
         "symfony/security": "~2.2",
         "symfony/console": "~2.2",
-        "friendsofsymfony/comment-bundle": "~2.0@dev",
+        "friendsofsymfony/comment-bundle": "~2.0",
         "sonata-project/core-bundle": "~2.2",
         "sonata-project/doctrine-extensions": "~1.0",
         "sonata-project/easy-extends-bundle": "~2.1"
     },
     "require-dev": {
         "sonata-project/classification-bundle": "~2.2",
-        "sonata-project/media-bundle": "~2.2"
+        "sonata-project/media-bundle": "~2.2",
+        "symfony/phpunit-bridge": "~2.7|~3.0"
     },
     "suggest": {
         "sonata-project/doctrine-orm-admin-bundle": "~2.2"
     },
+    "minimum-stability": "dev",
+    "prefer-stable": true,
     "autoload": {
         "psr-4": { "Sonata\\CommentBundle\\": "" }
     },
