--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,8 @@
     "require-dev": {
         "sonata-project/classification-bundle": "~2.2",
         "sonata-project/media-bundle": "~2.2",
-        "symfony/phpunit-bridge": "~2.7|~3.0"
+        "symfony/phpunit-bridge": "~2.7|~3.0",
+        "fabpot/php-cs-fixer": "~0.1|~1.0"
     },
     "suggest": {
         "sonata-project/doctrine-orm-admin-bundle": "~2.2"
