--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
         "symfony/security": "~2.2",
         "symfony/console": "~2.2",
         "friendsofsymfony/comment-bundle": "~2.0",
-        "sonata-project/core-bundle": "~2.2",
+        "sonata-project/core-bundle": "^2.2.1",
         "sonata-project/doctrine-extensions": "~1.0",
         "sonata-project/easy-extends-bundle": "~2.1"
     },
