--- a/composer.json
+++ b/composer.json
@@ -17,12 +17,12 @@
         }
     ],
     "require": {
-        "symfony/http-foundation": "~2.2",
-        "symfony/form": "~2.2",
-        "symfony/security": "~2.2",
-        "symfony/console": "~2.2",
+        "symfony/http-foundation": "~2.2|~3.0",
+        "symfony/form": "~2.2|~3.0",
+        "symfony/security": "~2.2|~3.0",
+        "symfony/console": "~2.2|~3.0",
         "friendsofsymfony/comment-bundle": "~2.0",
-        "sonata-project/core-bundle": "^2.2.1",
+        "sonata-project/core-bundle": "~2.3,>=2.3.10",
         "sonata-project/doctrine-extensions": "~1.0",
         "sonata-project/easy-extends-bundle": "~2.1"
     },
