--- a/composer.json
+++ b/composer.json
@@ -17,32 +17,30 @@
         }
     ],
     "require": {
-        "symfony/http-foundation": "~2.2|~3.0",
-        "symfony/form": "~2.2|~3.0",
-        "symfony/security": "~2.2|~3.0",
-        "symfony/console": "~2.2|~3.0",
-        "friendsofsymfony/comment-bundle": "~2.0",
-        "sonata-project/core-bundle": "~2.3,>=2.3.10",
-        "sonata-project/doctrine-extensions": "~1.0",
-        "sonata-project/easy-extends-bundle": "~2.1"
+        "symfony/http-foundation": "^2.3 || ^3.0",
+        "symfony/form": "^2.3 || ^3.0",
+        "symfony/security": "^2.3 || ^3.0",
+        "symfony/console": "^2.3 || ^3.0",
+        "friendsofsymfony/comment-bundle": "^2.0",
+        "sonata-project/core-bundle": "^3.0",
+        "sonata-project/doctrine-extensions": "^1.0",
+        "sonata-project/easy-extends-bundle": "^2.1"
     },
     "require-dev": {
-        "sonata-project/classification-bundle": "~2.2",
-        "sonata-project/media-bundle": "~2.2",
-        "symfony/phpunit-bridge": "~2.7|~3.0",
-        "fabpot/php-cs-fixer": "~0.1|~1.0"
+        "sonata-project/classification-bundle": "^3.0",
+        "sonata-project/media-bundle": "^3.0",
+        "symfony/phpunit-bridge": "^2.7 || ^3.0",
+        "sllh/php-cs-fixer-styleci-bridge": "^2.0"
     },
     "suggest": {
-        "sonata-project/doctrine-orm-admin-bundle": "~2.2"
+        "sonata-project/doctrine-orm-admin-bundle": "For doctrine ORM admin integration"
     },
-    "minimum-stability": "dev",
-    "prefer-stable": true,
     "autoload": {
         "psr-4": { "Sonata\\CommentBundle\\": "" }
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "2.x-dev"
+            "dev-master": "3.x-dev"
         }
     }
 }
