--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         }
     ],
     "require": {
+        "php": "^5.3 || ^7.0",
         "symfony/http-foundation": "^2.3 || ^3.0",
         "symfony/form": "^2.3 || ^3.0",
         "symfony/security": "^2.3 || ^3.0",
