--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -10,13 +10,12 @@
          stopOnFailure="false"
          syntaxCheck="false"
          bootstrap="Tests/bootstrap.php"
-        >
+>
     <testsuites>
-        <testsuite name="Comment Bundle Test Suite">
-            <directory>./Tests/</directory>
+        <testsuite name="CommentBundle Test Suite">
+            <directory>./Tests</directory>
         </testsuite>
     </testsuites>
-
 
     <filter>
         <whitelist>
@@ -25,10 +24,14 @@
                 <directory>./Tests/</directory>
                 <directory>./DataFixtures/</directory>
                 <directory>./Resources/</directory>
-                <directory>./DependencyInjection/</directory>
                 <directory>./vendor/</directory>
+                <directory>./coverage/</directory>
             </exclude>
         </whitelist>
     </filter>
+
+    <php>
+        <ini name="precision" value="8"/>
+    </php>
 
 </phpunit>
