--- a/composer.json
+++ b/composer.json
@@ -17,21 +17,21 @@
         }
     ],
     "require": {
-        "php": "^5.3 || ^7.0",
+        "php": "^7.1",
         "friendsofsymfony/comment-bundle": "^2.0",
         "sonata-project/core-bundle": "^3.0",
         "sonata-project/doctrine-extensions": "^1.0",
         "sonata-project/easy-extends-bundle": "^2.1",
-        "symfony/console": "^2.3 || ^3.0",
-        "symfony/form": "^2.3 || ^3.0",
-        "symfony/http-foundation": "^2.3 || ^3.0",
-        "symfony/security": "^2.3 || ^3.0"
+        "symfony/console": "^2.8 || ^3.2",
+        "symfony/form": "^2.8 || ^3.2",
+        "symfony/http-foundation": "^2.8 || ^3.2",
+        "symfony/security": "^2.8 || ^3.2"
     },
     "require-dev": {
         "sllh/php-cs-fixer-styleci-bridge": "^2.0",
         "sonata-project/classification-bundle": "^3.0",
         "sonata-project/media-bundle": "^3.6",
-        "symfony/phpunit-bridge": "^2.7 || ^3.0"
+        "symfony/phpunit-bridge": "^3.3"
     },
     "suggest": {
         "sonata-project/doctrine-orm-admin-bundle": "For doctrine ORM admin integration"
