--- a/composer.json
+++ b/composer.json
@@ -26,18 +26,22 @@
         "sonata-project/doctrine-extensions": "^1.0",
         "sonata-project/easy-extends-bundle": "^2.1",
         "symfony/console": "^2.8 || ^3.2 || ^4.0",
+        "symfony/dependency-injection": "^2.8 || ^3.2 || ^4.0",
+        "symfony/event-dispatcher": "^2.8 || ^3.2 || ^4.0",
         "symfony/form": "^2.8 || ^3.2 || ^4.0",
+        "symfony/framework-bundle": "^2.8 || ^3.2 || ^4.0",
         "symfony/http-foundation": "^2.8 || ^3.2 || ^4.0",
-        "symfony/security": "^2.8 || ^3.2 || ^4.0"
+        "symfony/http-kernel": "^2.8 || ^3.2 || ^4.0",
+        "symfony/options-resolver": "^2.8 || ^3.2 || ^4.0"
     },
     "conflict": {
         "sonata-project/block-bundle": "<3.11"
     },
     "require-dev": {
+        "sonata-project/admin-bundle": "^3.31",
         "sonata-project/block-bundle": "^3.11",
-        "sonata-project/classification-bundle": "^3.0",
-        "sonata-project/media-bundle": "^3.6",
-        "symfony/phpunit-bridge": "^3.3 || ^4.0"
+        "sonata-project/classification-bundle": "^3.6",
+        "symfony/phpunit-bridge": "^4.0"
     },
     "suggest": {
         "sonata-project/doctrine-orm-admin-bundle": "For doctrine ORM admin integration"
