--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
         }
     ],
     "require": {
-        "php": "^5.6 || ^7.0",
+        "php": "^7.1",
         "friendsofsymfony/comment-bundle": "^2.0.13",
         "sonata-project/core-bundle": "^3.9",
         "sonata-project/doctrine-extensions": "^1.0",
