--- a/composer.json
+++ b/composer.json
@@ -22,9 +22,10 @@
     "require": {
         "php": "^7.1",
         "friendsofsymfony/comment-bundle": "^2.0.13",
-        "sonata-project/core-bundle": "^3.18",
-        "sonata-project/doctrine-extensions": "^1.0",
+        "sonata-project/doctrine-extensions": "^1.6",
         "sonata-project/easy-extends-bundle": "^2.4",
+        "sonata-project/form-extensions": "^1.2",
+        "sonata-project/twig-extensions": "^1.2",
         "symfony/console": "^3.4 || ^4.2",
         "symfony/dependency-injection": "^3.4 || ^4.2",
         "symfony/event-dispatcher": "^3.4 || ^4.2",
@@ -32,7 +33,8 @@
         "symfony/framework-bundle": "^3.4 || ^4.2",
         "symfony/http-foundation": "^3.4 || ^4.2",
         "symfony/http-kernel": "^3.4 || ^4.2",
-        "symfony/options-resolver": "^3.4 || ^4.2"
+        "symfony/options-resolver": "^3.4 || ^4.2",
+        "symfony/translation": "^3.4 || ^4.2"
     },
     "conflict": {
         "sonata-project/block-bundle": "<3.11"
