--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,8 @@
         "symfony/options-resolver": "^3.4 || ^4.2"
     },
     "conflict": {
-        "sonata-project/block-bundle": "<3.11"
+        "sonata-project/block-bundle": "<3.11",
+        "sonata-project/core-bundle": "<3.20"
     },
     "require-dev": {
         "sonata-project/admin-bundle": "^3.58",
