--- a/composer.json
+++ b/composer.json
@@ -20,30 +20,31 @@
         }
     ],
     "require": {
-        "php": "^7.1",
-        "friendsofsymfony/comment-bundle": "^2.0.13",
-        "sonata-project/doctrine-extensions": "^1.0",
-        "sonata-project/easy-extends-bundle": "^2.4",
+        "php": "^7.2",
+        "friendsofsymfony/comment-bundle": "^2.4",
+        "sonata-project/doctrine-extensions": "^1.8",
         "sonata-project/form-extensions": "^0.1 || ^1.4",
         "sonata-project/twig-extensions": "^0.1 || ^1.3",
-        "symfony/console": "^3.4 || ^4.2",
-        "symfony/dependency-injection": "^3.4 || ^4.2",
-        "symfony/event-dispatcher": "^3.4 || ^4.2",
-        "symfony/form": "^3.4 || ^4.2",
-        "symfony/framework-bundle": "^3.4 || ^4.2",
-        "symfony/http-foundation": "^3.4 || ^4.2",
-        "symfony/http-kernel": "^3.4 || ^4.2",
-        "symfony/options-resolver": "^3.4 || ^4.2"
+        "symfony/console": "^4.4",
+        "symfony/dependency-injection": "^4.4",
+        "symfony/event-dispatcher": "^4.4",
+        "symfony/form": "^4.4",
+        "symfony/framework-bundle": "^4.4",
+        "symfony/http-foundation": "^4.4",
+        "symfony/http-kernel": "^4.4",
+        "symfony/options-resolver": "^4.4"
     },
     "conflict": {
-        "sonata-project/block-bundle": "<3.11",
+        "sonata-project/block-bundle": "<3.18",
         "sonata-project/core-bundle": "<3.20"
     },
     "require-dev": {
+        "matthiasnoback/symfony-config-test": "^4.0",
+        "matthiasnoback/symfony-dependency-injection-test": "^4.0",
         "sonata-project/admin-bundle": "^3.58",
         "sonata-project/block-bundle": "^3.18",
         "sonata-project/classification-bundle": "^3.9",
-        "symfony/phpunit-bridge": "^5.0"
+        "symfony/phpunit-bridge": "^5.1"
     },
     "suggest": {
         "sonata-project/doctrine-orm-admin-bundle": "For doctrine ORM admin integration"
