--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
         "comment",
         "sonata"
     ],
-    "homepage": "https://sonata-project.org/bundles/comment",
+    "homepage": "https://docs.sonata-project.org/projects/SonataCommentBundle",
     "license": "MIT",
     "authors": [
         {
