--- a/composer.json
+++ b/composer.json
@@ -41,6 +41,7 @@
     "require-dev": {
         "matthiasnoback/symfony-config-test": "^4.2",
         "matthiasnoback/symfony-dependency-injection-test": "^4.0",
+        "phpunit/phpunit": "^9.5",
         "sonata-project/admin-bundle": "^3.58",
         "sonata-project/block-bundle": "^3.18",
         "sonata-project/classification-bundle": "^3.9",
